# epanet_tools

./: README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
config/: validate_network_example.yml
docs/: architecture.md  complete_pipeline.md  data_contract.md  development.md  functionalities.md  roadmap.md
examples/: example_irrigation_scheduler.py  example_postprocess.py
src/epanet_postprocess/: __init__.py  diagnostics.py  export.py  plots.py  reader.py  summary.py
src/epanet_tools/: __init__.py  config.py  exceptions.py  irrigation_scheduler.py  models.py
src/epanet_tools/analysis/: __init__.py
src/epanet_tools/editing/: __init__.py
src/epanet_tools/hydraulic/: __init__.py  attributes.py  demands.py  validation.py
src/epanet_tools/io/: __init__.py  gis_outputs.py  inp.py  reports.py  vector.py
src/epanet_tools/model/: nodes.py
src/epanet_tools/terrain/: __init__.py  elevation.py
src/epanet_tools/topology/: __init__.py  cleaning.py  connectivity.py  identifiers.py  review.py  validation.py
src/epanet_tools/visualization/: __init__.py
src/epanet_tools/workflows/: __init__.py  validate_network.py
tests/: test_basic_model_validation.py  test_connectivity.py  test_elevation.py  test_gis_outputs.py  test_hydraulic_attributes.py  test_identifiers.py  test_inp_export.py  test_irrigation_scheduler.py  test_models.py  test_pipe_validation.py  test_postprocess_reader.py  test_reports.py  test_topology_cleaning.py  test_validate_network_workflow.py  test_vector_reader.py
