[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epanet-tools"
version = "0.1.0"
description = "Tools for building, editing, validating and analysing EPANET models from GIS data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "LicenseRef-Proprietary" }
authors = [
  { name = "Rafael Rosa" }
]
dependencies = [
  "geopandas>=0.14",
  "shapely>=2.0",
  "rasterio>=1.3",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyproj>=3.6",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
excel = [
  "openpyxl>=3.1",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8",
  "pre-commit>=3.6",
  "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
packages = ["epanet_tools", "epanet_postprocess"]
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
